[project]
name = "md-viewer"
version = "0.1.0"
description = "Render markdown files in Chrome with LaTeX support"
requires-python = ">=3.10"
dependencies = [
    "mistune>=3.0",
]

[project.scripts]
md = "md_viewer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
